v0.2 changelog

Added the following:
    - version number is printed out to the console when the application starts
    - If the application is closed with an open connection, the connection is automatically reset