@@ -5,20 +5,12 @@ from scapy.layers.inet import IP, TCP
 from scapy.all import *
 
 
-# s = socket.socket()
-#
-# s.connect(("192.168.59.129", 179))
-# ss = StreamSocket(s)
-#
-# ss.send(BGP())
-# ss.close()
-
 class Connection:
 
     def __init__(self):
         self.timeout = 5
         self.dport = 64444
-        self.sport = 64444 #random.randint(30000, 65000)
+        self.sport = 64444
         self.src = '192.168.59.128'
         self.dst = '192.168.59.129'
         self.connected = False
@@ -26,8 +18,9 @@ class Connection:
         self.ack = None
         self.base_seq = 1000
         self.seq = 1000
+        self.verbose = False
 
-    def config(self, src=None, dst=None, sport=None, dport=None, timeout=None, base_seq=None, seq=None):
+    def config(self, src=None, dst=None, sport=None, dport=None, timeout=None, base_seq=None, seq=None, ack=None):
         self.src = src if src else self.src
         self.dst = dst if dst else self.dst
         self.sport = sport if sport else self.sport
@@ -35,6 +28,7 @@ class Connection:
         self.timeout = timeout if timeout else self.timeout
         self.base_seq = base_seq if base_seq else self.base_seq
         self.seq = seq if seq else self.seq
+        self.ack = ack if ack else self.ack
 
         print('''
     source ip(src):             {}
@@ -44,6 +38,8 @@ class Connection:
     timeout(timeout):           {}
     base seq number:            {}
     current seq number(seq)     {}
+    base ack number:            {}
+    current ack number(ack):    {}
         '''.format(
             self.src,
             self.dst,
@@ -51,42 +47,56 @@ class Connection:
             self.dport,
             self.timeout,
             self.base_seq,
-            self.seq
+            self.seq,
+            self.base_ack,
+            self.ack
         ))
 
     def is_connected(self):
         return self.connected
 
-    def connect(self):
+    def connect(self, v=None):
+        verbose = self.verbose if v is None else v
         try:
             # SYN
             self.ip = IP(src=self.src, dst=self.dst)
             syn = TCP(sport=self.sport, dport=self.dport, flags='S', seq=self.seq)
             syn_ack = sr1(self.ip / syn)
 
-            syn_ack.show()
-            print("old seq {}".format(self.seq))
+            if verbose:
+                print("========== RESPONSE FROM SYN ==========")
+                syn_ack.show()
+                print("=======================================")
+
+            # incrementing seq since syn has a phantom byte
             self.seq += 1
-            print("new seq {}".format(self.seq))
 
-            print("old ack {}".format(self.ack))
+            # setting ack number using seq from response
+            self.base_ack = syn_ack.seq
             self.ack = syn_ack.seq
-            print("new ack {}".format(self.ack))
 
-            # SYN-ACK
+            # incrementing ack from phantom byte in SYN ACK response
             self.ack += 1
-            ack = TCP(sport=self.sport, dport=self.dport, flags='A', seq=self.seq, ack=self.ack)
 
+            assert syn_ack.haslayer(TCP), 'TCP layer missing'
+            assert syn_ack[TCP].flags & 0x12 == 0x12, 'No SYN/ACK flags'
+            assert syn_ack[TCP].ack == self.seq, 'Acknowledgment number error'
+
+            # sending ack response
+            ack = TCP(sport=self.sport, dport=self.dport, flags='A', seq=self.seq, ack=self.ack)
             send(self.ip / ack)
+
+
             self.connected = True
         except Exception as ex:
             print(ex)
             print("FAILED TO CONNECT")
 
-    def disconnect(self):
+    def disconnect(self, v=None):
+        verbose = self.verbose if v is None else v
         try:
             fin = self.ip / TCP(sport=self.sport, dport=self.dport, flags="FA", seq=self.seq, ack=self.ack)
-            ack_fin_ack = sr1(fin, timeout=1, multi=1)
+            ack_fin_ack = sr1(fin, timeout=15, multi=1)
             ack = ack_fin_ack[0]
             fin_ack = ack_fin_ack[1]
 
@@ -99,9 +109,11 @@ class Connection:
             self.connected = False
         except Exception as ex:
             print(ex)
-            print("FAILED TO DISCONNECT")
+            print("FAILED TO DISCONNECT, SENDING RESET")
+            self.reset()
 
-    def reset(self, seq=None):
+    def reset(self, seq=None, v=None):
+        verbose = self.verbose if v is None else v
         try:
             seq = seq if seq else self.seq
             ip = IP(src=self.src, dst=self.dst)
@@ -135,7 +147,6 @@ class Connection:
 
             assert ack.haslayer(TCP), 'TCP layer missing'
             assert ack[TCP].flags & 0x10 == 0x10, 'No ACK flag'
-
 
         except Exception as ex:
             print(ex)
